--- a/assets/wpcf7-entries.css
+++ b/assets/wpcf7-entries.css
@@ -10,7 +10,7 @@
 }
 
 .wpcf7-entris-settings-wrap .box-widget {
-    padding: 30px 15px;
+    padding: 20px 15px 30px;
     border: 1px solid #ccd0d4;
     background-color: #fff;
 }
